@@ -157,9 +157,12 @@ b bugfix
               + state/subsystems
               + utils/comm
               + utils/acomm
+              + utils/unravel_index
               + invariant/LU
+              + examples/bernstein_vazirani
               b utils/plot_adiabatic_evolution: eigs call now works for non-real matrices as well
               b state/negativity: extra sqrt removed
+              b examples/qft_circuit: now nonpalindromic dimension vectors work too
               * utils/lrmul simplified
               * hamiltonian/heisenberg takes now a connection graph as input
               * renames:
